--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Cosmos</string>
+    <string name="epod">Earth</string>
+    <string name="mars">Mars</string>
+    <string name="apod">APOD</string>
+    <string name="next">Next image</string>
+    <string name="more">Details</string>
 </resources>
