--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="next">Next image</string>
     <string name="more">Details</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="loading">Loading...</string>
 </resources>
